# localstack-rust-example

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
