[package]
name = "localstack-rust-example"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
lambda_runtime = { version = "0.14.2", default-features = false }
tokio = { version = "1.46", default-features = false, features = ["macros"] }

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
